Pack it up, pack it in

--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -3,6 +3,7 @@
  **/
 @import 'colors/variables';
 @import 'type/variables';
+@import 'type/mixins';
 @import 'variables';
 @import 'mixins';
 @import 'placeholders';
