--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -8,6 +8,10 @@
  ******************************************************************************/
 @import 'core';
 
+@import 'resets';
+
+@import 'basics';
+
 @import 'flexibility/core';
 
 @import 'type/core';
