--- a/sass/flexibility/_variables.scss
+++ b/sass/flexibility/_variables.scss
@@ -1,2 +1,10 @@
 $flex-name: 'flex' !default;
-$flex-class: unquote("#{unquote(".")}#{$flex-name}") !default;
+$flex-class: ".#{$flex-name}" !default;
+
+
+$FLEX-ALIGN: (top, bottom, center, stretch, between, around, baseline);
+$FLEX-ALIGN-CONTENT: (top, bottom, center, stretch, between, around);
+$FLEX-ALIGN-SELF: (top, bottom, center, baseline, stretch);
+$FLEX-JUSTIFY: (left, right, center, around, between);
+$FLEX-BASE: (fixed, fluid, first, last, grow, shrink, x-reverse, y-reverse,
+             wrap-reverse, nowrap);
