--- a/sass/grid/_core.scss
+++ b/sass/grid/_core.scss
@@ -7,6 +7,10 @@
 @import '../flexibility/mixins';
 @import '../flexibility/placeholders';
 
+@import '../spacing/variables';
+@import '../spacing/mixins';
+@import '../spacing/placeholders';
+
 @import 'variables';
 @import 'mixins';
 @import 'placeholders';
