--- a/sass/grid/_placeholders.scss
+++ b/sass/grid/_placeholders.scss
@@ -4,6 +4,7 @@
     @extend %#{$flex-name}--wrap;
     @extend %#{$flex-name}--x;
     @include flex-basis(100%);
+    @include break-for(gutters--x); // Gutters
   }
 
 
@@ -14,6 +15,7 @@
     @extend %#{$flex-name}--wrap;
     @extend %#{$flex-name}--x;
     position: relative;
+    @include break-for(gutters--x); // Gutters
   }
 
   // Padding gutters */
