--- a/sass/type/_core.scss
+++ b/sass/type/_core.scss
@@ -2,6 +2,11 @@
  ** Typography
  **/
 @import '../core';
+
+@import '../grid/variables';
+@import '../grid/mixins';
+
 @import 'variables';
+@import 'mixins';
 @import 'placeholders';
 @import 'layout';
