--- a/sass/ui/card/_placeholders.scss
+++ b/sass/ui/card/_placeholders.scss
@@ -9,6 +9,6 @@
     border-color: $card-border-color;
     border-radius: $card-border-radius;
     width: 100%;
-    @include break-for(margin-gutters--2y);
+    @include break-for(margin-gutters--y);
   }
 }
