--- a/sass/ui/form/toggler/_variables.scss
+++ b/sass/ui/form/toggler/_variables.scss
@@ -1,2 +1,2 @@
 $toggler-name: 'toggler' !default;
-$toggler-class: unquote("#{unquote(".")}#{$toggler-name}") !default;
+$toggler-class: ".#{$toggler-name}" !default;
