--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,65 +1,6 @@
 @include import-once('core-layout') {
-  /**
-   ** Browser resets
-   **/
   *, *:before, *:after {
     /** border-box for all, as it should be */
-    @include prefix((box-sizing: border-box), webkit moz);
-  }
-
-
-  a, b, body, code, div, em, fieldset,  h1, h2, h3, h4, h5, h6, html, i, iframe,
-  img, label, li, ol, p, pre, span, ul {
-    @extend %browser-reset;
-  }
-
-
-  @-ms-viewport {
-    width: device-width;
-  }
-
-
-  html, body {
-    min-height: 100%;
-    height: 100%;
-  }
-
-
-  li, ol, ul { list-style: none }
-
-
-  body {
-    min-height: 100%;
-    position: relative;
-  }
-
-
-  a {
-    cursor: pointer;
-  }
-
-
-  .divider {
-    background: $divider-color;
-    height: $divider-height;
-    width: 100%;
-    display: block;
-    position: relative;
-  }
-
-
-  .disabled {
-    color: $disabled-link-color;
-  }
-
-
-  .no-touchevents .disabled:hover {
-    cursor: not-allowed;
-    color: $disabled-link-color;
-  }
-
-
-  .noborder {
-    border: 0 !important;
+    box-sizing: border-box;
   }
 }
