--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,8 @@
 $MAX-Z-INDEX: 2147483647;
 $MAX-PX: 10000000px;
-
+$FAST: 0.13s !default;
+$MED: 0.33s !default;
+$SLOW: 0.5s !default;
 
 // Default borders
 $border-width: 1px !default;
