--- a/sass/columns/_core.scss
+++ b/sass/columns/_core.scss
@@ -2,6 +2,10 @@
  ** Multi-column layout (.cols)
  **/
 @import '../core';
+
+@import '../grid/variables';
+@import '../grid/mixins';
+
 @import 'variables';
 @import 'mixins';
 @import 'placeholders';
